# voleyballbot

./: .gitignore  .vercelignore  Pipfile  README.md  bot.py  config.json  handlers.py  main.py  models.py  package.json  pyproject.toml  requirements.txt  setup.py  startup.py  vercel.json
api/telegram/: webhook.js
data/: initial_data.json
tests/: conftest.py  test_bot.py  test_models.py
utils/: __init__.py  db.py  init_db.py
