[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "volleyballbot"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "Volleyball community player management bot with Telegram integration"
readme = "README.md"
requires-python = ">=3.9, <=3.12"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-telegram-bot[env, callback_data]==20.0",
    "sqlalchemy==2.0.7",
    "python-dotenv==1.0.0",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
testing = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/volleyballbot"
